--- a/style.css
+++ b/style.css
@@ -43,6 +43,15 @@ body {
 .navbar_s3{
     display: flex;
     gap: 10px;
+    gap: 10px;
+}
+.navbar_s3 :hover{
+
+    border: solid 1px black;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 2px;
+    
 }
 
 .catogories{
@@ -59,6 +68,13 @@ body {
 
 }
 
+.catogories :hover{
+    border: solid 1px black;
+    border-radius: 30px;
+    cursor: pointer;
+    padding: 10px;
+}
+
 .sale-image img{
     width: 100%;
 }
@@ -73,6 +89,14 @@ body {
     
 
 
+}
+
+.course-card img:hover{
+
+    border: solid 1px black;
+    border-radius: 4px;
+    cursor: pointer;
+    padding:4px;
 }
 .course-card{
     width: 300px;
@@ -100,6 +124,14 @@ body {
     flex-basis:25%;
 
 
+}
+.topic-container :hover{
+
+    border: solid 1px black;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 2px;
+    margin-right: 3px;
 }    
  
 .popular{
@@ -151,4 +183,20 @@ body {
     justify-content: space-between;
     display: flex;
     margin: 20px;
+}
+
+.footer__one__s1 p:hover{
+
+    border: solid 1px white;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 2px;
+}
+
+.footer__one__s2 p:hover{
+
+    border: solid 1px white;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 2px;
 }
