--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     top: 0;
     background-color: white;
     z-index: 1;
+    
 }
 .navbar_s2{
     padding: 10px;
@@ -35,12 +36,14 @@ body {
     gap: 10px;
     align-items: center;
     background-color: transparent;
+    
 }
 .navbar_s2 input{
     border: none;
     width: 100%;
     font-size: 16px;
     align-items: center;
+    
 }
 .navbar_s2 input:focus{
     outline: none;
@@ -82,20 +85,22 @@ body {
     padding: 10px;
     justify-content: space-around;
     border-bottom: solid black 1px;
+    
 }
 .catogories p{
     background-color: #A435F0;
     padding: 10px;
     color: white;
     border-radius: 30px;
+    border: solid 1px black;
 
 }
 
-.catogories :hover{
-    border: solid 1px black;
-    border-radius: 30px;
+.catogories p:hover{
     cursor: pointer;
-    padding: 10px;
+    background-color: transparent;
+    color: black;
+    transition: 1s;
 }
 
 .sale-image img{
@@ -114,6 +119,23 @@ body {
     margin: 5px;
     width: 500px;
     border: black solid 2px;
+    animation-name: pop;
+    opacity: 0;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    
+} 
+
+@keyframes pop {
+    0%{
+        
+        transform: scale(0);
+        opacity: 0;
+    }
+    100%{
+        transform:scale(1);
+        opacity: 1;
+    }
     
 }
 .recommanded{
